Correction recette image (stretch) + grosseur polices + lien logos

--- a/_base/_variables.scss
+++ b/_base/_variables.scss
@@ -9,7 +9,8 @@
     --noir: #000000;
     --vert: #bac373;
     --vert-fonce: #98a154;
+    --gris-fonce: #3e3e3e;
     --gris: #999999;
-    --gris-fonce: #3d312b;
+    --brun-fonce: #331d11;
     --blanc: #fff;
   }
