--- a/_layout/_footer.scss
+++ b/_layout/_footer.scss
@@ -28,7 +28,7 @@ footer {
         }
         @include breakpoint(1366){
             width: 100%;
-            font-size: 1rem;
+            font-size: 1.1rem;
         }
     }
 }
