--- a/_layout/_pub.scss
+++ b/_layout/_pub.scss
@@ -5,11 +5,11 @@
 //----------------------------------------------------//
 
 .pub-basic {
-    background-color: var(--gris);
+    background-color: var(--gris-fonce);
     @include flex-horizontal;
     align-items: center;
     justify-content: center;
-    color: var(--blanc);
+    color: var(--gris);
 }
 
 
@@ -21,8 +21,8 @@
     @include breakpoint(768){
         margin: 2rem auto;
         padding: 2em 0 2em 0;
-        width: 80%;
-        max-width: 800px;
+        width: 100%;
+        max-width: 700px;
     }
 
     @include breakpoint(1366){
